Fix styling on small screens

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,6 +14,9 @@ body{
     background-color: #151515;
     color: white;
     font-family: 'Fredoka One', sans-serif;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .main{
